--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,10 @@ log = "0.4.21"
 pretty_env_logger = "0.5.0"
 futures = "0.3.30"
 reqwest = { version = "0.12.4", features = ["json", "stream"] }
+crc32fast = "1.4.2"
+rand = "0.8.5"
+bincode = "1.3.3"
+serde_bytes = "0.11.14"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
