--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ crc32fast = "1.4.2"
 rand = "0.8.5"
 bincode = "1.3.3"
 serde_bytes = "0.11.14"
+aes-gcm = "0.10.3"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
