--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "dialog-save", "dialog-open"] }
+tauri = { version = "1", features = [ "os-all", "dialog-save", "dialog-open"] }
 serde = { version = "1.0.203", features = ["derive"] }
 tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
 serde_json = "1.0.117"
